--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperHeroApp"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".SuperHeroActivity">
         <activity
             android:name=".ui.screens.friends.Friends"
             android:exported="false" />
@@ -19,7 +20,7 @@
             android:name=".ui.screens.enemies.Enemies"
             android:exported="false" />
         <activity
-            android:name=".data.ui.screens.superheros.MainActivity"
+            android:name=".ui.screens.superheros.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
